fixed: 完全修复了菜单单击失败的问题，之前方案有引入问题。

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,7 +1,7 @@
 {
-    "RecentFile": [
-        "BMW.json",
-        "Lenovo.json"
+    "RecentFile": [  
+        "Lenovo.json",
+	"BMW.json"
     ],
     "Version": "v0.1.0",    
     "Date": "2023/04/05"
