fixed: 添加配置文件的修改和切换功能

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,13 +1,11 @@
 {
-    "?HostName": "当前主机名，用来标记读取RecentFile中的哪个Json：Lenovo、BMW、life-record",
-	"HostName": "BMW",
-    "?RecentFile": "Json文件列表，也就是当前conf文件中的Json文件",
-    "RecentFile": [  
+    "Date": "2023.12.24",
+    "HostName": "Lenovo",
+    "RecentFile": [
+        "HP.json",
         "Lenovo.json",
-	    "BMW.json"
+        "生活相关.json",
+        "雅思学习.json"
     ],
-    "?Version": "版本号",    
-    "Version": "v0.1.0",  
-    "?Date": "更新日期",    
-    "Date": "2023/05/28"
+    "Version": "v0.1.0"
 }
