fixed: 添加rename目录判断是否在仓库bug

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,11 +1,5 @@
 {
-    "Date": "2023.12.24",
-    "HostName": "Lenovo",
-    "RecentFile": [
-        "HP.json",
-        "Lenovo.json",
-        "生活相关.json",
-        "雅思学习.json"
-    ],
+    "Date": "2023.12.25",
+    "HostName": "生活相关",
     "Version": "v0.1.0"
 }
