--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,5 +1,11 @@
 {
-    "Date": "2023.12.25",
-    "HostName": "生活相关",
+    "Date": "2023.12.26",
+    "HostName": "HP",
+    "RecentFile": [
+        "HP.json",
+        "Lenovo.json",
+        "生活相关.json",
+        "雅思学习.json"
+    ],
     "Version": "v0.1.0"
 }
