fixed: 修改资源宽度缩放的大小

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,11 +1,5 @@
 {
     "Date": "2023.12.26",
-    "HostName": "HP",
-    "RecentFile": [
-        "HP.json",
-        "Lenovo.json",
-        "生活相关.json",
-        "雅思学习.json"
-    ],
+    "HostName": "Lenovo",
     "Version": "v0.1.0"
 }
