--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,6 +1,6 @@
 {
-    "Date": "2023.12.27",
-    "HostName": "Lenovo",
+    "Date": "2023.12.28",
+    "HostName": "HP",
     "RecentFile": [
         "HP.json",
         "Lenovo.json",
