--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,6 +1,6 @@
 {
     "Date": "2023.12.28",
-    "HostName": "HP",
+    "HostName": "Lenovo",
     "RecentFile": [
         "HP.json",
         "Lenovo.json",
