fixed: 更新版本v1.0.0.beta

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,5 +1,5 @@
 {
-    "Date": "2023.12.29",
+    "Date": "2023.12.31",
     "HostName": "Lenovo",
     "RecentFile": [
         "HP.json",
@@ -7,5 +7,5 @@
         "生活相关.json",
         "雅思学习.json"
     ],
-    "Version": "v0.1.0"
+    "Version": "v1.0.0.beta"
 }
