fixed: 修改适配2K屏幕分辨率

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,6 +1,6 @@
 {
-    "Date": "2023.12.31",
-    "HostName": "Lenovo",
+    "Date": "2024.01.02",
+    "HostName": "HP",
     "RecentFile": [
         "HP.json",
         "Lenovo.json",
