fixed: 修复了屏幕分辨率问题

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,6 +1,6 @@
 {
     "Date": "2024.01.02",
-    "HostName": "HP",
+    "HostName": "雅思学习",
     "RecentFile": [
         "HP.json",
         "Lenovo.json",
