fixed: 修复了添加assetstype添加Item的bug

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,6 +1,6 @@
 {
-    "Date": "2024.01.02",
-    "HostName": "雅思学习",
+    "Date": "2024.01.03",
+    "HostName": "Lenovo",
     "RecentFile": [
         "HP.json",
         "Lenovo.json",
