--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,6 +1,6 @@
 {
-    "Date": "2024.01.03",
-    "HostName": "Lenovo",
+    "Date": "2024.01.04",
+    "HostName": "HP",
     "RecentFile": [
         "HP.json",
         "Lenovo.json",
