fixed:修复了修改Assets类型和拷贝markdown代码冗余bug

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,6 +1,6 @@
 {
-    "Date": "2024.01.05",
-    "HostName": "HP",
+    "Date": "2024.01.16",
+    "HostName": "Lenovo",
     "RecentFile": [
         "HP.json",
         "Lenovo.json",
