fixed: 添加了对自定义图标的不支持

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,6 +1,6 @@
 {
-    "Date": "2024.01.16",
-    "HostName": "Lenovo",
+    "Date": "2024.07.02",
+    "HostName": "生活相关",
     "RecentFile": [
         "HP.json",
         "Lenovo.json",
